syntax = "proto3";

package home;
option go_package = "../../pkg/pb";



message CreateFlatRequest {
    int32 house_id = 1;
    int32 price = 2;
    int32 rooms = 3;
}

message CreateFlatResponse {
    int32 id = 1;
    int32 house_id = 2;
    int32 price = 3;
    int32 rooms = 4;
    string status = 5;
}